tests/invalid/simple/Function_CompileFail_5.whiley
int f(int x) where x >= 0:
    return x

int f(int x) where x >= 0:
    return x

void System::main([string] args):    
    print str(f(1))
    
    
